Update Android SDK command line tools to version 12.0 Fix sdkmanager component installation removing the double quotes from CLI arguments